<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_signin_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/create_an_account"
            android:textColor="#FFFFFF"
            android:paddingRight="200dp"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/already_have_an_account"
                android:textColor="#FFFFFF"
                android:paddingRight="230dp"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/log_in"
                android:textColor="#FFC107"
                android:textSize="14sp"
                android:paddingBottom="24dp" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:hint="@string/name"
                android:backgroundTint="#FFFFFF"
                android:textColor="#FFFFFF"
                android:textColorHint="@color/black"
                android:padding="10dp"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextSurname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:hint="@string/surname"
                android:backgroundTint="#FFFFFF"
                android:textColor="#FFFFFF"
                android:textColorHint="@color/black"
                android:padding="10dp"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:hint="@string/email_address"
                android:backgroundTint="#FFFFFF"
                android:textColor="#FFFFFF"
                android:textColorHint="@color/black"
                android:padding="10dp"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="" android:hint="@string/password"
                android:backgroundTint="#FFFFFF"
                android:textColor="#FFFFFF"
                android:textColorHint="@color/black"
                android:padding="10dp"
                android:inputType="textPassword" />

            <CheckBox
                android:id="@+id/checkBoxRememberMe"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/remember_me"
                android:textColor="#FFFFFF"
                android:paddingTop="16dp" />

            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:backgroundTint="#00796B"
                android:textColor="#FFFFFF"
                android:textAllCaps="false"
                android:layout_marginTop="24dp" />

</LinearLayout>


</RelativeLayout>