<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_signin_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textSize="24sp"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account2"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Log in"
                android:textColor="#FFC107"
                android:textSize="14sp"
                android:paddingBottom="24dp" />

            <EditText
                android:id="@+id/editTextEmailSignIn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:hint="@string/email_address2"
                android:backgroundTint="#FFFFFF"
                android:textColor="#FFFFFF"
                android:textColorHint="@color/black"
                android:padding="10dp"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editTextPasswordSignIn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:hint="@string/enter_password"
                android:backgroundTint="#FFFFFF"
                android:textColor="#FFFFFF"
                android:textColorHint="@color/black"
                android:padding="10dp"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/forgot_password"
                android:textColor="#FFC107"
                android:paddingTop="8dp" />

            <Button
                android:id="@+id/buttonSignIn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:backgroundTint="#00796B"
                android:textColor="#FFFFFF"
                android:textAllCaps="false"
                android:layout_marginTop="24dp" />

    </LinearLayout>


</RelativeLayout>